log/build_2022-02-08_20-48-41/cv_basics/stderr.log
  File "/home/halvor/dev_ws/install/cv_basics/lib/python3.8/site-packages/cv_basics/helper.py", line 40
    break
    ^
SyntaxError: 'break' outside loop

